--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.yswl.priv.h5vedioapp.WelcomeActivity">
 
+    <TextView
+        android:id="@+id/src"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
