--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,6 @@
     <color name="colorPrimaryDark">#FF205DC2</color>
     <color name="colorPrimary">#4285F4</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorAdccent">#a0c1b7b9</color>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="black_overlay">#000000</color>
 </resources>
