--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,24 +13,42 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
-
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
+    <style name="AppTheme.MainActivity" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/black_overlay</item>
+        <item name="colorPrimaryDark">@color/black_overlay</item>
+        <item name="actionOverflowMenuStyle">@style/ToolBarTheme.OverflowMenuStyle</item>
+    </style>
+
+
 
     <style name="ToolBarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <item name="android:textSize">18sp</item>
         <item name="android:textColorPrimary">@android:color/white</item><!--标题颜色-->
-        <!--菜单-->
-        <item name="actionMenuTextColor">@android:color/white</item> <!--菜单字体颜色-->
-        <item name="actionMenuTextAppearance">@style/ActionBarMenuStyle</item> <!--菜单字体大小-->
-        <item name="selectableItemBackground">@color/colorPrimaryDark</item> <!--菜单选中状态-->
+        <!--菜单  这里的菜单就是右上角的东东-->
+         <item name="actionMenuTextColor">@android:color/white</item> <!--菜单字体颜色-->
+         <item name="actionMenuTextAppearance">@style/ActionBarMenuStyle</item> <!--菜单字体大小-->
+        <!-- <item name="selectableItemBackground">@color/colorPrimaryDark</item> 菜单选中状态-->
     </style>
-
-    <style name="ActionBarMenuStyle" parent="@android:style/TextAppearance.Holo.Medium">
+    <style name="ToolBarTheme.OverflowMenuStyle" parent="@style/Widget.AppCompat.PopupMenu.Overflow">
+        <!-- 是否覆盖锚点，默认为true，即盖住Toolbar -->
+        <item name="overlapAnchor">false</item>
+        <item name="android:dropDownWidth">40dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <!-- 弹出层背景颜色 -->
+        <item name="android:popupBackground">@color/black_overlay</item>
+        <!-- 弹出层垂直方向上的偏移，即在竖直方向上距离Toolbar的距离，值为负则会盖住Toolbar -->
+        <item name="android:dropDownVerticalOffset">2dp</item>
+        <!-- 弹出层水平方向上的偏移，即距离屏幕左边的距离，负值会导致右边出现空隙 -->
+        <item name="android:dropDownHorizontalOffset">0dp</item>
+        <!-- 设置弹出菜单文字颜色 -->
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="ActionBarMenuStyle" parent="@android:style/TextAppearance.Holo.Medium">
+        <item name="android:textSize">18sp</item>
     </style>
 
 
